# RICE

./: .env  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  main.cpp  notebook.ipynb  pom.xml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
demo/: pom.xml
demo/src/main/antlr4/com/dennisking/: Language.g4
demo/src/main/antlr4/com/dennisking/.antlr/: LanguageLexer.java  LanguageParser.java
demo/src/main/antlr4/com/example/.antlr/: LanguageLexer.java  LanguageParser.java
demo/src/main/java/com/dennisking/: LanguageCustomVisitor.java
demo/src/main/java/com/example/: LanguageCustomVisitor.java  Main.java
rice/: pom.xml
rice/src/main/antlr4/com/dennisking/: Rice.g4  RiceLanguage.g4
rice/src/main/antlr4/com/dennisking/.antlr/: LanguageLexer.java  LanguageParser.java  Rice.g4  Rice.interp  RiceLanguLexer.java  RiceLanguageLexer.java  RiceLanguageParser.java  RiceLexer.interp  RiceLexer.java  RiceLexer.tokens  RiceParser.java
rice/src/main/java/com/dennisking/: App.java  Main.java  RiceCustomVisitor.java  RiceLexer.java  RiceParser.java  program.rice
rice/src/main/java/com/dennisking/rice/: App.java  LexerParser.java  Token.java  TokenType.java
rice/src/test/java/com/dennisking/: AppTest.java
rice1/src/main/java/com/dennisking/: RiceCustomVisitor.java  program.rice
rice2/src/main/antlr4/com/dennisking/: Rice.g4
rice2/src/main/java/com/dennisking/: Main.java  RiceCustomVisitor.java  program.rice
rice3/src/main/antlr4/com/dennisking/: Rice.g4
rice3/src/main/java/com/dennisking/: Main.java  RiceCustomVisitor.java
(+20 files in other folders)
